remove letter-spacing bill: fix cannot show bar is voteSummary.YNPA either is NaN

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -56,7 +56,6 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     line-height: (60px / 44px);
     font-family: 'Playfair Display', serif;
-    letter-spacing: (-0.5px / 44px * 1em);
 }
 h4 {
     line-height: (26px / 22px);
@@ -158,7 +157,6 @@ h4 {
     line-height: 30px;
     border-radius: 15px;
     text-align: center;
-    letter-spacing: (-0.2px / 13px * 1em);
     font-size: rem(13px);
 
     &.button--green {
