--- a/src/scss/pages/_bill.scss
+++ b/src/scss/pages/_bill.scss
@@ -149,13 +149,11 @@
         h5 {
             font-size: rem(22px);
             line-height: (26px / 22px);
-            letter-spacing: (-0.2px / 22px * 1em);
         }
 
         .summary {
             display: block;
             line-height: (20px / 15px);
-            letter-spacing: (-0.2px / 15px * 1em);
             margin-top: 5px;
             opacity: 0.4;
         }
@@ -200,7 +198,7 @@
     .content-highlight {
         margin-top: 12px;
     }
-    
+
     ul.content-highlight {
         padding: 0;
     }
